@@ -1,3 +1,4 @@
+EBUILD cldg-meta-11.12-r1.ebuild 1176 RMD160 c632879fdf7cfba197937107945e8e65e4b6e750 SHA1 e2670c56eb0fc12d07a06274b54ef75733f6c36b SHA256 dafab2754ec5cb8f36a903864d7adc2dc7af4e8e009fc2a768d2d1d7fd168575
 EBUILD cldg-meta-11.12.ebuild 1282 RMD160 f8cb063edaa57726054b3f4d723327f8d18c48d0 SHA1 db8ff1189fcc0d0fce2bca5519cd10a067ad4790 SHA256 61f3b4be8520f164aee6ffde098abdff01073a4a0ba77b5db6cd2abe23433206
-MISC ChangeLog 3951 RMD160 7fdb9d15d1acd1b45d4c1489c196db3837e66fa2 SHA1 194b3bac6217bb62d6cfed6e24aa1f890429e551 SHA256 c0da430238a2aaf32c9da1ba4290fb304f5069fe93b16cd470c3e748496048a2
+MISC ChangeLog 4110 RMD160 458808307c2fdcb0a460183f1e4ab3b09411ba63 SHA1 69e991fcffb5cbd425ff254548ce8a78cfc5f160 SHA256 c4d0eeabed60b5c84761f5a43d331d226e6c2f90c043461dc595d45e96930a84
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
