@@ -1,3 +1,4 @@
+~app-misc/cldg-meta amd64 x86
 ~app-misc/cl-gnome-meta-3.2 amd64 x86
 ~gnome-base/gnome-3.2.1 amd64 x86
 ~media-sound/rhythmbox-2.95 amd64 x86
