@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cldg-meta
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cldg-meta-11.12-r1 (25 Jan 2012)
+
+  25 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cldg-meta-11.12-r1.ebuild:
+  remote compiz from gnome3
 
 *cldg-meta-11.12 (05 Dec 2011)
 
